perf: Optimize registration approval and banning with multithreading- Implemented multithreading using CompletableFuture and ExecutorService to process ban and approve operations concurrently.- Added parallel stream processing for banning and approving student registrations to improve performance.- Ensured proper thread management for handling large datasets.- Improved the efficiency of student repository operations by handling data asynchronously.